--- a/_posts/2018-05-09-Kioptrix-1.1(#2)-Walkthrough.markdown
+++ b/_posts/2018-05-09-Kioptrix-1.1(#2)-Walkthrough.markdown
@@ -26,15 +26,7 @@ First things first, we need to scan our network to find out what's the IP addres
 
 ![httpauth]({{ "/images/kioptrix2_netdiscover.png" | absolute_url }})
 
- 
-{% highlight text %}
-def print_hi(name)
-  puts "Hi, #{name}"
-end
-print_hi('Tom')
-#=> prints 'Hi, Tom' to STDOUT.
-{% endhighlight %}
-
+Under Maintenance - NOT FINISHED!
 
 [jekyll-docs]: https://jekyllrb.com/docs/home
 [jekyll-gh]:   https://github.com/jekyll/jekyll
